--- a/librariOnline-App/src/app/components/commentuser/commentuser.component.html
+++ b/librariOnline-App/src/app/components/commentuser/commentuser.component.html
@@ -1,5 +1,5 @@
 <div class="timeline-comment-box">
-    <div style="background-color: yellow; display: flex; align-items: center;">
+    <div style="display: flex; align-items: center;">
         <div class="user">
             <img src="https://bootdey.com/img/Content/avatar/avatar3.png">
         </div>
