--- a/librariOnline-App/src/app/components/faculty-list/faculty-list.component.html
+++ b/librariOnline-App/src/app/components/faculty-list/faculty-list.component.html
@@ -1,7 +1,6 @@
 <div class="course-outside-wrapper">
 
     <div class="side left-container">
-        sdfsdfsdf
     </div>
     
     <div class="center-main-container">
@@ -13,8 +12,8 @@
                
                 <ul class="w3-ul w3-card-4">
                     <li *ngFor = "let faculty of faculties" class="w3-bar">
-                      <span (click) = "listDegetFromFaculty(faculty.id)" class="w3-bar-item w3-button w3-white w3-xlarge w3-right">×</span>
-                      <img src="img_avatar2.png" class="w3-bar-item w3-circle w3-hide-small" style="width:85px">
+                      <span (click) = "listDegetFromFaculty(faculty.id)" class="w3-bar-item w3-button w3-white w3-xlarge w3-right">></span>
+                      <img src="/assets/fac.png" class="w3-bar-item w3-circle w3-hide-small" style="width:85px">
                       <div class="w3-bar-item">
                         <span class="w3-large">{{faculty.name}}</span><br>
                         <span>Web Designer</span>
