--- a/librariOnline-App/src/app/components/friends-pop-up/friends-pop-up.component.html
+++ b/librariOnline-App/src/app/components/friends-pop-up/friends-pop-up.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="friends-list">
       
-        <ul>
+        <ul style="list-style: none;">
             <li *ngFor="let friend of users.friends">
                 <app-friendsingle-element [user]="friend"></app-friendsingle-element>
 
