--- a/librariOnline-App/src/app/components/friendsingle-element/friendsingle-element.component.html
+++ b/librariOnline-App/src/app/components/friendsingle-element/friendsingle-element.component.html
@@ -7,9 +7,8 @@
         </div>
 
         <div class="profile-name">
-            <div>{{user.name}}</div>
-            <div>@{{user.username}}</div>
-            <div>@{{loggedInUser.username}}</div>
+            <div style="font-size: 15px; color:gainsboro">{{user.name}}</div>
+            <div style="font-size: 15px; color:gainsboro">@{{user.username}}</div>
 
         </div>
     </div>
@@ -48,9 +47,8 @@
         </div>
 
         <div class="profile-name">
-            <div>{{user.name}}</div>
+            <div style="font-size: 15px; color:gainsboro">{{user.name}}</div>
             <div>@{{user.username}}</div>
-            <div>@{{loggedInUser.username}}</div>
 
         </div>
     </div>
