--- a/librariOnline-App/src/app/components/main/course/course.component.html
+++ b/librariOnline-App/src/app/components/main/course/course.component.html
@@ -2,7 +2,7 @@
 <div class="course-outside-wrapper">
  
     <div class="side left-container">
-        sdfsdfsdf
+        
     </div>
 
     <div class="center-main-container">
@@ -22,7 +22,7 @@
 
 
             <div class="poster">
-
+                <img src="/assets/75zlka6uvk50oas19oly.webp" alt="">
             </div>
 
             <div class="posts">
