--- a/librariOnline-App/src/app/components/map/map.component.html
+++ b/librariOnline-App/src/app/components/map/map.component.html
@@ -1,17 +1,13 @@
 
 <div class="{{displayPopUp ? 'outter-cont-show' : 'outter-cont-hide'}}">
     <div class="exit-button" style="position:fixed;" (click)="removePopUp()">
-        {{displayPopUp}}
+        <i class="fa fa-times"></i>
+
     </div>
     <div class="friends-list">
-        <iframe
-        width="600"
-        height="450"
-        style="border:0"
-        loading="lazy"
-        allowfullscreen
-        src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBT7KsL_xZ2nFYEjBlrobFShPDFLMzuMhE
-          &q=Space+Needle,Seattle+WA">
+       
+        <iframe width="100%" height="100%" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?key=AIzaSyC5vT0xShxmjkEySXJ--5ENnPtEweK2Bro
+        &q=Space+Needle,Tirana">
       </iframe>
 
     </div>
