--- a/librariOnline-App/src/app/components/dege/dege.component.css
+++ b/librariOnline-App/src/app/components/dege/dege.component.css
@@ -2,13 +2,12 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: green;
 }
 
 .side{
     width: 20%;
     height: 100%;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0);
 }
 .left-container{
     float: left;
@@ -29,7 +28,6 @@
     float: left;
     width: 55%;
     height: 100%;
-    background-color: hotpink;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -37,7 +35,7 @@
 .center-wrapper{
     width: 97%;
     height: 97%;
-    background-color: brown;
+    background-color: rgba(100, 93, 93, 0.823);
 }
 
 .feeds-top{
@@ -80,4 +78,10 @@
     width: 100%;
     height: 350px;
     background-color: black;
+}
+
+
+li{
+    margin-top: 0.4em;
+    background-color: rgba(170, 147, 117, 0.789);
 }
