--- a/librariOnline-App/src/app/components/footer/footer.component.css
+++ b/librariOnline-App/src/app/components/footer/footer.component.css
@@ -1,30 +1,90 @@
-.footer{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    background-color: rgba(39, 39, 48, 0.829);
-}
-.list-container{
-    width: 50%;
-}
-ul{
-    display: flex;
-    flex-direction: row;
-    list-style: none;
-}
-ul li{
-    display: inline;
-    flex-wrap: nowrap;
-    width: 40%;
-    padding:4%;
-    background-color: rgb(155, 125, 125);
-    margin-left:10px ;
-}
-ul li:hover{
-    background-color:  rgba(140, 113, 113, 0.767);
-    cursor:pointer;
-}
-ul li span{
-    align-items: center;
-    align-content: center;
-}
+
+.footer-dark {
+    padding:40px 0;
+    color:#f0f9ff;
+    background-color:#282d32;
+  }
+  
+  .footer-dark h3 {
+    margin-top:0;
+    margin-bottom:12px;
+    font-weight:bold;
+    font-size:16px;
+  }
+  
+  .footer-dark ul {
+    padding:0;
+    list-style:none;
+    line-height:1.6;
+    font-size:14px;
+    margin-bottom:0;
+  }
+  
+  .footer-dark ul a {
+    color:inherit;
+    text-decoration:none;
+    opacity:0.6;
+  }
+  
+  .footer-dark ul a:hover {
+    opacity:0.8;
+  }
+  
+  @media (max-width:767px) {
+    .footer-dark .item:not(.social) {
+      text-align:center;
+      padding-bottom:20px;
+    }
+  }
+  
+  .footer-dark .item.text {
+    margin-bottom:36px;
+  }
+  
+  @media (max-width:767px) {
+    .footer-dark .item.text {
+      margin-bottom:0;
+    }
+  }
+  
+  .footer-dark .item.text p {
+    opacity:0.6;
+    margin-bottom:0;
+  }
+  
+  .footer-dark .item.social {
+    text-align:center;
+  }
+  
+  @media (max-width:991px) {
+    .footer-dark .item.social {
+      text-align:center;
+      margin-top:20px;
+    }
+  }
+  
+  .footer-dark .item.social > a {
+    font-size:20px;
+    width:36px;
+    height:36px;
+    line-height:36px;
+    display:inline-block;
+    text-align:center;
+    border-radius:50%;
+    box-shadow:0 0 0 1px rgba(255,255,255,0.4);
+    margin:0 8px;
+    color:#fff;
+    opacity:0.75;
+  }
+  
+  .footer-dark .item.social > a:hover {
+    opacity:0.9;
+  }
+  
+  .footer-dark .copyright {
+    text-align:center;
+    padding-top:24px;
+    opacity:0.3;
+    font-size:13px;
+    margin-bottom:0;
+  }
