--- a/librariOnline-App/src/app/components/friends-pop-up/friends-pop-up.component.css
+++ b/librariOnline-App/src/app/components/friends-pop-up/friends-pop-up.component.css
@@ -18,7 +18,15 @@
 .exit-button{
     width: 100%;
     height: 5%;
-    background-color: red;
+    background-color: rgba(77, 48, 48, 0.878);
+    
+}
+.exit-button i{
+    font-size: 18px;
+    margin-top: 0.5%;
+    cursor: pointer;
+    color: white;
+    padding: 0.5%;
 }
 .friends-list{
     margin-top:3%;
