--- a/librariOnline-App/src/app/components/header/header.component.html
+++ b/librariOnline-App/src/app/components/header/header.component.html
@@ -2,21 +2,18 @@
     <div class="profile">
             <div  class="profile-wrapper">
                 <div (click)="mainmenu()"  class="img-cont">
-                    <img [src]="user.profilePic" alt="">
+                    <img src="/assets/ut.png" alt="">
                 </div>
 
                 <div  class="name-text">{{user.name}}</div>
-
             </div>
-
-
     </div>
 
     <div class="list-container">
        
             <div class="search">
-                <input type="text" placeholder="Search..">
-
+                <input type="text" placeholder="Search.." name="searchtext" [(ngModel)] = "searchtext">
+                <input type="submit" (click)="searchFunction()" value="Search">
             </div>
             <!-- <li (click) = "displayUser()">
                 <span>View Users</span>
@@ -85,19 +82,20 @@
 
 
 
+                    
 
 
-                <div (click)="userProfile()" class="dropdown">
+                <div style="cursor: pointer;" (click)="userProfile()" class="dropdown">
                     <span>
                         <div style="width: 50px; height: 50px; border-radius:50% ; background-color: red;">
                             <img [src]="user.profilePic" alt="">
                         </div>
                     </span>
                     <div class="dropdown-content">
-                        <li (click) = "userProfile()">Profile</li>
-                        <li (click) = "createPost()">Create Post</li>
-                        <li (click) = "updateProfile()">Settings</li>
-                        <li (click) = "logOut()">Sign Out</li>
+                        <li (click) = "userProfile()"><span>Profile</span></li>
+                        <li (click) = "createPost()"><span>Create Post</span></li>
+                        <li (click) = "updateProfile()"><span>Settings</span></li>
+                        <li (click) = "logOut()"><span>Log Out</span></li>
                     </div>
 
                 </div>
