--- a/librariOnline-App/src/app/components/login/login.component.css
+++ b/librariOnline-App/src/app/components/login/login.component.css
@@ -2,7 +2,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: tomato;
+    background-color: rgba(250, 247, 247, 0.898);
     display: flex;
     justify-content: center;
     overflow:hidden;
@@ -41,9 +41,9 @@ button{
     --borderRadius: 0.125rem;
     --highlight: #306090;
     background: white;
-    border: 1px solid var(--border);
-    border-radius: var(--borderRadius);
-    box-shadow: 0 1.4rem 1rem -0.75rem var(--border);
+    border: 0px solid var(--border);
+    background: rgb(247, 244, 244);
+    box-shadow: 1.5em 1.8rem 2rem -0.75rem var(--border);
     display: flex;
     flex-direction: column;
     padding: 8rem;
