--- a/librariOnline-App/src/app/components/main/course/course.component.css
+++ b/librariOnline-App/src/app/components/main/course/course.component.css
@@ -2,13 +2,12 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: green;
 }
 
 .side{
     width: 20%;
     height: 100%;
-    background-color: white;
+    background-color: rgb(236, 231, 231);
 }
 .left-container{
     float: left;
@@ -29,16 +28,17 @@
     float: left;
     width: 55%;
     height: 100%;
-    background-color: hotpink;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 12px;
 }
 .center-wrapper{
     width: 97%;
     height: 97%;
-    background-color: brown;
     overflow: auto;
+    border-radius: 10px;
+
 }
 .center-wrapper::-webkit-scrollbar {
     display: none;
@@ -48,6 +48,8 @@
 .feeds-top{
     width: 100%;
     height: 80px;
+    background-color: #c1c5b3;
+
 }
 
 .feeds-title{
@@ -56,12 +58,14 @@
     align-items: center;
     width: 30%;
     height: 100%;
+    margin-left: 5%;
 
 }
 .feeds-title span{
     margin-left: 5%;
     font-size: 32px;
     font-weight: 600;
+    color: #212423;
 }
 .feeds-option{
     float: right;
@@ -70,12 +74,26 @@
     justify-content: flex-end;
     width: 50%;
     height: 100%;
+    margin-right: 5%;
 }
 .feeds-option a{
     padding: 4%;
-    background-color: rgb(192, 188, 196);
+    background-color: rgba(100, 100, 100, 0.344);
     margin-left: 4%;
     text-decoration: none;
+    border-radius: 4px;
+    font-size: 18px;
+    letter-spacing: 1px;
+    color: black;
+    cursor: pointer;
+
+}
+.feeds-option a:hover{
+    padding: 4%;
+    background-color: rgba(100, 100, 100, 0.563);
+    margin-left: 4%;
+    text-decoration: none;
+    border-radius: 4px;
     font-size: 18px;
     letter-spacing: 1px;
     color: black;
@@ -83,8 +101,19 @@
 
 .poster{
     width: 100%;
-    height: 150px;
-    background-color: black;
+    height: 320px;
+    background-color: rgba(79, 73, 73, 0.487);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border:none;
+}
+.poster img{
+    
+width:100%;
+height:100%;
+object-fit: cover;
+
 }
 
 .posts{
