--- a/librariOnline-App/src/app/components/main/main.component.html
+++ b/librariOnline-App/src/app/components/main/main.component.html
@@ -1,8 +1,9 @@
     <!-- <p>{{dataTakenFromParentToMain}}</p>
     <p>Length of Users: {{users.length}}</p> -->
-    <app-header></app-header> 
+    <app-header (searchTextEmitter) = "searchTextTomain($event)"></app-header> 
     <div  class="main-comp">
-        <router-outlet style="width: 100%; display: flex;">
+        <router-outlet   style="width: 100%; display: flex;">
         </router-outlet>
     </div>
     <app-footer></app-footer>
+
