--- a/librariOnline-App/src/app/components/main/single-course/single-course.component.html
+++ b/librariOnline-App/src/app/components/main/single-course/single-course.component.html
@@ -7,7 +7,7 @@
          <div class="timeline-body">
             <div class="timeline-header">
                <span class="userimage"><img src="https://bootdey.com/img/Content/avatar/avatar3.png" alt=""></span>
-               <span class="username"><a href="javascript:;">Sean Ngu</a> <small></small></span>
+               <span class="username"><a href="javascript:;">{{_post.postTitle}}</a> <small></small></span>
             </div>
             <div class="timeline-content">
                <p>
