--- a/librariOnline-App/src/app/components/main/user/userpostdetails/single-userpost.component.css
+++ b/librariOnline-App/src/app/components/main/user/userpostdetails/single-userpost.component.css
@@ -2,13 +2,12 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: green;
 }
 
 .side{
     width: 20%;
     height: 100%;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.049);
 }
 .left-container{
     float: left;
@@ -29,7 +28,6 @@
     float: left;
     width: 55%;
     height: 100%;
-    background-color: hotpink;
     display: flex;
     justify-content: center;
     align-items: center;
