--- a/librariOnline-App/src/app/components/sign-up/sign-up.component.css
+++ b/librariOnline-App/src/app/components/sign-up/sign-up.component.css
@@ -2,7 +2,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: tomato;
+  background-color: rgba(250, 247, 247, 0.898);
   display: flex;
   justify-content: center;
   overflow:hidden;
@@ -24,7 +24,7 @@ button{
 .login-form {
     width: 40%;
     overflow:hidden;
-  --background: white;
+  --background: rgb(138, 108, 108);
   --border: rgba(0, 0, 0, 0.125);
   --borderDark: rgba(0, 0, 0, 0.25);
   --borderDarker: rgba(0, 0, 0, 0.5);
@@ -39,10 +39,10 @@ button{
   --shadeNormal: 0.5;
   --borderRadius: 0.125rem;
   --highlight: #306090;
-  background: white;
-  border: 1px solid var(--border);
+  background: rgb(247, 244, 244);
+  border: 0.0px solid var(--border);
   border-radius: var(--borderRadius);
-  box-shadow: 0 1.4rem 1rem -0.75rem var(--border);
+  box-shadow: 1.5em 1.8rem 2rem -0.75rem var(--border);
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -51,12 +51,14 @@ button{
 }
 .wrapper{
   display: flex;
+  justify-content:center;
+
 }
 .left-part{
-  width: 50%;
+  margin-right: 3%;
 }
 .right-part{
-  width: 50%;
+  margin-left: 3%;
 }
 select{
   border: 1px solid var(--border);
