--- a/librariOnline-App/src/app/components/subject-details/subject-details.component.css
+++ b/librariOnline-App/src/app/components/subject-details/subject-details.component.css
@@ -2,13 +2,12 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: green;
 }
 
 .side{
-    width: 20%;
+    width: 16%;
     height: 100%;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.207);
 }
 .left-container{
     float: left;
@@ -27,18 +26,26 @@
 }
 .center-main-container{
     float: left;
-    width: 55%;
+    width: 62%;
     height: 100%;
-    background-color: hotpink;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 12px;
 }
+
 .center-wrapper{
     width: 97%;
     height: 97%;
-    background-color: brown;
+    background-color: rgba(100, 62, 62, 0.885);
     overflow: auto;
+    border-radius: 12px;
+
+
+}
+.center-wrapper::-webkit-scrollbar{
+    visibility: hidden;
+
 }
 
 .feeds-top{
@@ -87,14 +94,30 @@
 
 .posts{
     height: 300px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.posts div{
+    width: 60%;
+    margin-top: 20px;
+    background-color: rgba(132, 132, 158, 0.131);
+    padding: 0.5% 1.5% ;
+    text-align: center;
+    border-radius: 2px;
+    color: white;
+    font-size: 22px;
+    font-weight: 400px;
+    letter-spacing: 1.2px;
 }
 
 .map{
-    background-color: blue;
     height: 350px;
 }
 .attenders{
-    background-color: yellow;
     min-height: 400px;
     overflow: auto;
 }
@@ -103,7 +126,6 @@
 .exit-button{
     width: 100%;
     height: 5%;
-    background-color: red;
 }
 .friends-list{
     margin-top:3%;
