--- a/librariOnline-App/src/app/components/university-list/university-list.component.html
+++ b/librariOnline-App/src/app/components/university-list/university-list.component.html
@@ -6,7 +6,6 @@
 
 <div class="course-outside-wrapper">
     <div class="side left-container">
-        sdfsdfsdf
     </div>
     
     <div class="center-main-container">
@@ -19,8 +18,8 @@
             <div class="posts">
                 <ul class="w3-ul w3-card-4">
                     <li *ngFor = "let univ of universityList" class="w3-bar" (click)="displayMap(univ.mapURL)">
-                      <span  (click) = "listUnivFaculties(univ.id)" class="w3-bar-item w3-button w3-white w3-xlarge w3-right"><i class="fas fa-arrow-right"></i></span>
-                      <img src="assets/upt.png" class="w3-bar-item w3-circle w3-hide-small" style="width:85px">
+                      <span  (click) = "listUnivFaculties(univ.id)" class="w3-bar-item w3-button w3-white w3-xlarge w3-right">></span>
+                      <img src="/assets/univ.png" class="w3-bar-item w3-circle w3-hide-small" style="width:85px">
                       <div class="w3-bar-item">
                         <span class="w3-large">{{univ.name}}</span><br>
                         <span>{{univ.location}}</span>
